src/objects/Amr_Saving__c.object
<CustomObject>
    <fields>
        <fullName>Average_Total_Opening_Quotes__c</fullName>
        <formula>Sum_Of_Total_Cost__c / Number_Of_Quotes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Total Opening Quotes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CA_Appraisal_Cost_Management__c</fullName>
        <label>CA Appraisal - Cost Management</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CA_Appraisal_Output_Quality__c</fullName>
        <label>CA Appraisal - Output Quality</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CA_Appraisal_Process_Management__c</fullName>
        <label>CA Appraisal - Process Management</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CA_Appraisal_Time_Management__c</fullName>
        <label>CA Appraisal - Time Management</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CA_Only_Currency__c</fullName>
        <label>CA Only (Currency)</label>
        <picklist>
            <picklistValues>
                <fullName>NT $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baht</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TT $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lira</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Turkish Lira</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Shilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAE Dirham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hryvna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peso U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ref Type 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuerte (Parallel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Kwacha</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CA_Only_Euro_Amount__c</fullName>
        <label>CA Only(Euro Amount)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CA_Only_Local_Amount__c</fullName>
        <label>CA Only (Local Amount)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ca_Cost_Manage_Star__c</fullName>
        <label>Ca Cost Manage Star</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ca_Output_Quality_Star__c</fullName>
        <label>Ca Output Quality Star</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ca_Process_Manage_Star__c</fullName>
        <label>Ca Process Manage Star</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ca_Time_Manage_Star__c</fullName>
        <label>Ca Time Manage Star</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Master_Per_Shoot_Day_Text__c</fullName>
        <formula>TEXT(ROUND(Cost_per_master_per_shoot_day__c,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Per Master Per Shoot Day Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Master_Text__c</fullName>
        <formula>TEXT(ROUND(Cost_Per_Master__c,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Per Master Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Master__c</fullName>
        <formula>Total_Accepted_FinalCost__c  /  No_of_Masters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Per Master</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_per_master_per_shoot_day__c</fullName>
        <formula>(Total_Accepted_FinalCost__c  /  No_of_Masters__c ) /  No_of_shoot_days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost per master per shoot day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration_of_Additional_Films_10__c</fullName>
        <label>Duration of Additional Films 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_of_Additional_Films_11__c</fullName>
        <label>Duration of Additional Films 11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_of_Additional_Films_12__c</fullName>
        <label>Duration of Additional Films 12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_of_Additional_Films__c</fullName>
        <label>Duration of Additional Films</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_of_Masters_10__c</fullName>
        <label>Duration of Masters 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_of_Masters_11__c</fullName>
        <label>Duration of Masters 11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_of_Masters_12__c</fullName>
        <label>Duration of Masters 12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_of_Masters__c</fullName>
        <label>Duration of Masters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edirors_Name__c</fullName>
        <label>Edirors Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folder_Name__c</fullName>
        <label>Folder Name</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted Quotes and Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Quotes and Documents</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Details__c</fullName>
        <label>Job Details</label>
        <referenceTo>Amr_Job_Details__c</referenceTo>
        <relationshipName>AM_Savings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Monthly_Submitted__c</fullName>
        <label>Monthly Submitted</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_Of_Shoot_Days_Text__c</fullName>
        <formula>TEXT(No_of_shoot_days__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Of Shoot Days Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Additional_Films_10__c</fullName>
        <label>No of Additional Films 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Additional_Films_11__c</fullName>
        <label>No of Additional Films 11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Additional_Films_12__c</fullName>
        <label>No of Additional Films 12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Additional_Films_List__c</fullName>
        <description>It will contain list of additional films.</description>
        <label>No of Additional Films List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Additional_Films__c</fullName>
        <label>No of Additional Films</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Masters_List__c</fullName>
        <description>It will contain list of no. of masters.</description>
        <label>No of Masters List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Masters__c</fullName>
        <label>No of Masters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_shoot_days__c</fullName>
        <label>No of shoot days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Additional_Films_Text__c</fullName>
        <formula>TEXT(No_of_Additional_Films__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Of Additional Films Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Masters_10__c</fullName>
        <label>Number Of Masters 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Masters_11__c</fullName>
        <label>Number Of Masters 11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Masters_12__c</fullName>
        <label>Number Of Masters 12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Masters_Text__c</fullName>
        <formula>TEXT(No_of_Masters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Of Masters Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Quotes__c</fullName>
        <label>Number Of Quotes</label>
        <summaryFilterItems>
            <field>Amr_Quote__c.Total_Cost__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Amr_Quote__c.Saving__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PC_Appraisal_Cost_Management__c</fullName>
        <label>PC Appraisal - Cost Management</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PC_Appraisal_Output_Quality__c</fullName>
        <label>PC Appraisal - Output Quality</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PC_Appraisal_Process_Management__c</fullName>
        <label>PC Appraisal - Process Management</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PC_Appraisal_Time_Management__c</fullName>
        <label>PC Appraisal - Time Management</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PC_Only_Currency__c</fullName>
        <label>PC Only (Currency)</label>
        <picklist>
            <picklistValues>
                <fullName>NT $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baht</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TT $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lira</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Turkish Lira</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Shilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAE Dirham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hryvna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peso U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ref Type 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuerte (Parallel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Kwacha</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PC_Only_Euro_Amount__c</fullName>
        <label>PC Only (Euro Amount)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Only_Local_Amount__c</fullName>
        <label>PC Only (Local Amount)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPC_Appraisal_Cost_Management__c</fullName>
        <label>PPC Appraisal - Cost Management</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Appraisal_Output_Quality__c</fullName>
        <label>PPC Appraisal - Output Quality</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Appraisal_Process_Management__c</fullName>
        <label>PPC Appraisal - Process Management</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Appraisal_Time_Management__c</fullName>
        <label>PPC Appraisal - Time Management</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Only_Currency__c</fullName>
        <label>PPC Only (Currency)</label>
        <picklist>
            <picklistValues>
                <fullName>NT $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baht</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TT $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lira</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Turkish Lira</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Shilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAE Dirham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hryvna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peso U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ref Type 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuerte (Parallel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Kwacha</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Only_Euro_Amount__c</fullName>
        <label>PPC Only (Euro Amount)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPC_Only_Local_Amount__c</fullName>
        <label>PPC Only (Local Amount)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pc_Cost_Manage_Star__c</fullName>
        <label>Pc Cost Manage Star</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pc_Output_Quality_Star__c</fullName>
        <label>Pc Output Quality Star</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pc_Output_Quality__c</fullName>
        <label>Pc Output Quality</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pc_Proces_Manage_Star__c</fullName>
        <label>Pc Proces Manage Star</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pc_Time_Manage_Star__c</fullName>
        <label>Pc Time Manage Star</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_Saving_Accepted_Quote_Text__c</fullName>
        <formula>TEXT(Percentage_Saving_Accepted_Quote__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage Saving Accepted Quote Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_Saving_Accepted_Quote__c</fullName>
        <label>% Saving - Accepted Quote</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentage_Saving_Average_Quote_Text__c</fullName>
        <formula>TEXT(round(Percentage_Saving_Average_of_Quotes__c,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage Saving Average Quote Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_Saving_Average_of_Quotes__c</fullName>
        <formula>(Saving_Average_of_Quotes__c/Average_Total_Opening_Quotes__c) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Saving - Average of Quotes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ppc_Cost_Manage_Star__c</fullName>
        <label>Ppc Cost Manage Star</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ppc_Output_Quality_Star__c</fullName>
        <label>Ppc Output Quality Star</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ppc_Process_Manage_Star__c</fullName>
        <label>Ppc Process Manage Star</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ppc_Time_Manage_Star__c</fullName>
        <label>Ppc Time Manage Star</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Type_Tv__c</fullName>
        <label>Production Type Tv</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Type__c</fullName>
        <label>Production Type</label>
        <picklist>
            <picklistValues>
                <fullName>TV: Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV: Animatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV: Tag-on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV: Cutdown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV: Re Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV: Pack Shot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV: Buyouts - Talent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV: Buyouts - Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV: Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio: Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio: Tag-on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio: Cutdown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio: Re-Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio: Buyouts - Talent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio: Buyouts - Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio: Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print: Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print: Retouch or Re-composition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print: Pack Shot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print: Buyouts - Talent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print: Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video Production (Internal Comms)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital: Film Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital: Still Image Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital: Film Re-work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital: Still Image Re-work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital: Buyouts - Talent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital: Buyouts - Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital: Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language Adaptation (non UniAdapt)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Saving_Accepted_Quote_Euro_Text__c</fullName>
        <formula>TEXT(Saving_Accepted_Quote_Euro__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saving Accepted Quote Euro Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saving_Accepted_Quote_Euro__c</fullName>
        <defaultValue>0</defaultValue>
        <label>€ Saving - Accepted Quote</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Saving_Average_Of_Quote_Text__c</fullName>
        <formula>TEXT(Saving_Average_of_Quotes__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saving Average Of Quote Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saving_Average_of_Quotes__c</fullName>
        <formula>Average_Total_Opening_Quotes__c - Total_Accepted_FinalCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>€ Saving - Average of Quotes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scope_re_brief__c</fullName>
        <label>Scope re-brief</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Script_Title__c</fullName>
        <label>Script Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shoot_Location_Multiselect__c</fullName>
        <label>Shoot Location Multiselect</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Shoot_Location__c</fullName>
        <label>Shoot Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sound_Studio_Name__c</fullName>
        <label>Sound Studio Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>